--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.box-spinning {
+  height: 60vmin;
+  /* animation: App-logo-spin 4s ease-in-out; */
 }
 
-@keyframes App-logo-spin {
+.mainbox {
+  position: relative;
+  margin-top: 4rem;
+  aspect-ratio: 1;
+  width: 50vmin;
+}
+
+.box {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 5px solid black;
+  transition: all ease 5s;
+}
+
+span {
+  width: 50%;
+  height: 50%;
+  display: inline-block;
+  position: absolute;
+}
+.span1 {
+  clip-path: polygon(0 92%, 100% 50%, 0 8%);
+  background-color: blue;
+  top: 25%;
+  left: 0;
+}
+.span2 {
+  clip-path: polygon(100% 92%, 0 50%, 100% 8%);
+  background-color: yellow;
+  top: 25%;
+  right: 0;
+}
+
+.span3 {
+  clip-path: polygon(50% 0, 8% 100%, 92% 100%);
+  background-color: purple;
+  bottom: 0;
+  left: 25%;
+}
+.span4 {
+  clip-path: polygon(50% 100%, 92% 0, 8% 0);
+  background-color: orange;
+  top: 0;
+  left: 25%;
+}
+.box2 {
+  width: 100%;
+  height: 100%;
+  transform: rotate(-135deg);
+}
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(1440deg);
   }
-}
+} */
