--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,25 @@
   justify-content: center;
   height: 100vh;
 }
-
-.box-spinning {
-  height: 60vmin;
-  /* animation: App-logo-spin 4s ease-in-out; */
+.wheel {
+  border: 1px solid blue;
 }
-
 .mainbox {
   position: relative;
   margin-top: 4rem;
   aspect-ratio: 1;
   width: 50vmin;
+  border: 1px solid red;
+}
+#arrow {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  right: -15px;
+  top: calc(50% - 1rem);
+  z-index: 2;
 }
 
 .box {
@@ -28,8 +36,8 @@
   position: relative;
   border-radius: 50%;
   overflow: hidden;
-  border: 5px solid black;
-  transition: all ease 5s;
+  border: 1px solid black;
+  transition: all ease 6s;
 }
 
 span {
@@ -38,6 +46,7 @@ span {
   display: inline-block;
   position: absolute;
 }
+
 .span1 {
   clip-path: polygon(0 92%, 100% 50%, 0 8%);
   background-color: blue;
@@ -63,17 +72,31 @@ span {
   top: 0;
   left: 25%;
 }
+
+.box1 .span3 b {
+  transform: translate(-50%, -50%) rotate(-270deg);
+}
+.box1 .span1 b,
+.box2 .span1 b {
+  transform: translate(-50%, -50%) rotate(185deg);
+}
+.box2 .span3 b {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+.box1 .span4 b,
+.box2 .span4 b {
+  transform: translate(-50%, -50%) rotate(-85deg);
+}
+
+span b {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .box2 {
   width: 100%;
   height: 100%;
   transform: rotate(-135deg);
 }
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(1440deg);
-  }
-} */
